--- a/index.html
+++ b/index.html
@@ -23,54 +23,49 @@
     </a>
   </picture>
   <header>
-  <div class="flex">
-    <a id="logoPK" href="#">
-      <img style="float: right;" src="static/logoPK.png" alt="">
-    </a>
-    <nav>
-      <div class="logoPK" class="flex">
-        <picture id="logo">
-          <a href="./templates/menu.html">
-            <picture>
-              <img id="menu" src="static/menu.png" alt="">
-            </picture>
-          </a>
-        </picture>
-      </div>
-      <ul class="minhaDivNavApareceESome">
-        <li>
-          <a href="templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="templates/sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="templates/hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="templates/validar certificado.html">
-            VALIDAR CERTIFICADO
-          </a>
-        </li>
-        <li>
-          <a href="templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+    <div class="flex">
+
+      <nav>
+        <a id="logoPK" href="#">
+          <img style="float: right;" src="static/logoPK.png" alt="">
+        </a>
+        <a id="logo" class="logoPK" href="./templates/menu.html">
+          <img id="menu" src="static/menu.png" alt="">
+        </a>
+        <ul class="minhaDivNavApareceESome">
+          <li>
+            <a href="templates/cursos.html">
+              CURSOS
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/ti.udia/" target="_blank">
+              BLOG
+            </a>
+          </li>
+          <li>
+            <a href="templates/sobre.html">
+              SOBRE
+            </a>
+          </li>
+          <li>
+            <a href="templates/hall da fama.html">
+              HALL DA FAMA
+            </a>
+          </li>
+          <li>
+            <a href="templates/validar certificado.html">
+              VALIDAR CERTIFICADO
+            </a>
+          </li>
+          <li>
+            <a href="templates/formulario de inscrição.html">
+              AFILIADOS
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <video muted autoplay loop>
       <source src="static/primeiro.mp4" media="(max-width: 500px)"
         style="video::internal-media-controls{display: none;}">
