--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   </picture>
   <header>
     <div class="flex">
-
       <nav>
         <a id="logoPK" href="#">
           <img style="float: right;" src="static/logoPK.png" alt="">
@@ -73,26 +72,28 @@
         style="video::internal-media-controls{display: none;}">
     </video>
   </header>
+  <picture>
+    <img id="produtosPng" src="static/produtos.png" alt="">
+  </picture>
   <div class="interface">
-    <section style="background-color: white; margin-top: 100px;">
-      <h1 style="color: #230D73; text-align: justify;">
+    <section style="margin-top: 100px;">
+      <h1 style="color: #230D73;">
         INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
-      <h1>
-        Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-      </h1>
-    </section>
-    <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
-      Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e
-      pago
-      atuamos principalmente com a venda e revenda de scripts ou modelos.
-    </p>
-    <section>
+          </section>
+            <h1>
+      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>
+     <section style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
       <p>
         Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
-        Desenvolvedores</p>
-    </section>
-    <section>
+        Desenvolvedores
+      </p>
+      <p>
+        Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e
+        pago
+        atuamos principalmente com a venda e revenda de scripts ou modelos.
+      </p>
       <p>
         Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
         <strong>INFOPRODUTOS</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
