--- a/index.html
+++ b/index.html
@@ -72,35 +72,35 @@
         style="video::internal-media-controls{display: none;}">
     </video>
   </header>
-  <picture>
-    <img id="produtosPng" src="static/produtos.png" alt="">
-  </picture>
   <div class="interface">
     <section style="margin-top: 100px;">
-      <h1 style="color: #230D73;">
+      <h1 style="color: #230D73; display: flex;">
+        <picture>
+          <img id="produtosPng" src="static/produtos.png" alt="">
+        </picture>
         INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
-          </section>
-            <h1>
-      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-    </h1>
-     <section style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
+    </section>
+    <section style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
       <p>
-        Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
+        Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time
+        validado de
         Desenvolvedores
       </p>
       <p>
-        Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e
-        pago
-        atuamos principalmente com a venda e revenda de scripts ou modelos.
+        Original: Aqui você vai encontrar um grupo de Desenvolvedores renomados, UI x UX e estrategistas de trafego
+        organico e pago atuamos principalmente com a venda e revenda de scripts ou modelos.
       </p>
       <p>
-        Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
+        Na reunião você retira duvidas, solicita referências do nosso trabalho e assim pode ter a certeza absoluta que a
         <strong>INFOPRODUTOS</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
         sonha em ter
       </p>
     </section>
     <div style="background-color: #230d731a;">
+      <h1>
+        Seu time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+      </h1>
       <p>
         <strong style="color:#230D73">
           Desenvolvedores, UI x UX
@@ -116,16 +116,18 @@
         atuamos principalmente com a venda e revenda de scripts ou modelos.
       </p>
     </div>
-    <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
-    <p>
+        <p>
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
       uma mistura de engenharia social.
     </p>
   </div>
   <footer style="background-color: #230d731a; padding: 5px;">
     <h1 id="form">
-      Aguardo ancioso para um entrevista.
+      Aguardo ancioso para nossa entrevista online.
     </h1>
+    <h2>
+      Venha conversar e compartilhe sua ideia conosco.
+    </h2>
     <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
     <p>Seja bem-vindo à INFOPRODUTOS!</p>
   </footer>
@@ -159,6 +161,15 @@
       </li>
     </ul>
   </section>
+<div class="flex">
+  <p style="background-color: white; color: #230D73;">
+    Desenvolvido por
+    <a href="https://www.instagram.com/nike_developer/" target="_blank">
+      <strong>
+        Nikke
+      </strong>
+    </a>
+  </p>
   <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
     <a href="https://www.facebook.com/profile.php?id=100063715227252">
       <img src="static/facebook.png" alt="" />
@@ -170,14 +181,7 @@
       <img src="static/github.png" alt="">
     </a>
   </picture>
-  <p style="background-color: white; color: #230D73;">
-    Desenvolvido por
-    <a href="https://www.instagram.com/nike_developer/" target="_blank">
-      <strong>
-        Nikke
-      </strong>
-    </a>
-  </p>
+  </div>
   <div
     style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
     <iframe loading="lazy"
