--- a/index.html
+++ b/index.html
@@ -73,15 +73,13 @@
     </video>
   </header>
   <div class="interface">
-    <section style="margin-top: 100px;">
-      <h1 style="color: #230D73; display: flex;">
-        <picture>
-          <img id="produtosPng" src="static/produtos.png" alt="">
-        </picture>
-        INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
+    <picture>
+      <img id="produtosPng" src="static/produtos.png" alt="">
+    </picture>
+    <section style=" font-size: medium; max-width: 500px; color: #230D73;">
+       <h1 style="color: #230D73;">
+                INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
-    </section>
-    <section style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
       <p>
         Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time
         validado de
