--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </video>
     </a>
   </picture>
-  <header>
+  <header style="padding: 15px;">
     <div class="flex">
       <nav>
         <a id="logoPK" href="#">
@@ -119,7 +119,7 @@
       uma mistura de engenharia social.
     </p>
   </div>
-  <footer style="background-color: #230d731a; padding: 5px;">
+  <footer style=" padding: 5px;">
     <h1 id="form">
       Aguardo ancioso para nossa entrevista online.
     </h1>
@@ -128,16 +128,10 @@
     </h2>
     <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
     <p>Seja bem-vindo à INFOPRODUTOS!</p>
-  </footer>
-  <section id="apps">
+   <section id="apps">
+    <h1 style="text-align: center; font-size: xx-large; margin: 15px;">Projetos</h1>
     <ul>
-      <h2>Projetos</h2>
-      <!-- <li>
-        <a href="https://www.souzadistribuidora.com.br/">
-          <img src="static/distribuidora souza.png" alt="">
-        </a>
-      </li> -->
-      <li>
+           <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
           <img src="static/logoAcai.png" alt="">
         </a>
@@ -159,23 +153,24 @@
       </li>
     </ul>
   </section>
+</footer>
 <div class="flex">
   <p style="background-color: white; color: #230D73;">
     Desenvolvido por
-    <a href="https://www.instagram.com/nike_developer/" target="_blank">
+    <a href="https://www.instagram.com/pablo_kennediy/" target="_blank">
       <strong>
         Nikke
       </strong>
     </a>
   </p>
   <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
-    <a href="https://www.facebook.com/profile.php?id=100063715227252">
+    <a target="_blank" href="https://www.facebook.com/profile.php?id=100063715227252">
       <img src="static/facebook.png" alt="" />
     </a>
-    <a href="https://www.instagram.com/ti.udia/">
+    <a target="_blank" href="https://www.instagram.com/ti.udia/">
       <img src="static/instagram.png" alt="" />
     </a>
-    <a href="https://github.com/Pablo-Kennediy">
+    <a target="_blank" href="https://github.com/Pablo-Kennediy">
       <img src="static/github.png" alt="">
     </a>
   </picture>
