--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </video>
     </a>
   </picture>
-  <header style="padding: 15px;">
+  <header >
     <div class="flex">
       <nav>
         <a id="logoPK" href="#">
@@ -65,18 +65,18 @@
         </ul>
       </nav>
     </div>
-    <video muted autoplay loop>
-      <source src="static/primeiro.mp4" media="(max-width: 500px)"
-        style="video::internal-media-controls{display: none;}">
-      <source src="static/Infinity.mp4" media="(min-width: 501px)"
-        style="video::internal-media-controls{display: none;}">
-    </video>
-  </header>
+      </header>
+      <video style="margin-top: 10vh;" muted autoplay loop>
+        <source src="static/primeiro.mp4" media="(max-width: 500px)"
+          style="video::internal-media-controls{display: none;}">
+        <source src="static/Infinity.mp4" media="(min-width: 501px)"
+          style="video::internal-media-controls{display: none;}">
+      </video>
   <div class="interface">
-    <picture>
+        <picture>
       <img id="produtosPng" src="static/produtos.png" alt="">
     </picture>
-    <section style=" font-size: medium; max-width: 500px; color: #230D73;">
+    <section>
        <h1 style="color: #230D73;">
                 INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
@@ -118,8 +118,6 @@
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
       uma mistura de engenharia social.
     </p>
-  </div>
-  <footer style=" padding: 5px;">
     <h1 id="form">
       Aguardo ancioso para nossa entrevista online.
     </h1>
@@ -128,6 +126,9 @@
     </h2>
     <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
     <p>Seja bem-vindo à INFOPRODUTOS!</p>
+  </div>
+  <footer style=" padding: 5px;">
+    
    <section id="apps">
     <h1 style="text-align: center; font-size: xx-large; margin: 15px;">Projetos</h1>
     <ul>
