--- a/index.html
+++ b/index.html
@@ -12,73 +12,28 @@
 </head>
 
 <body>
-  <picture id="btnWhatsapp">
-    <a href="https://maper.info/29j736" style="background-color: white;" target="_blank">
-      <video muted autoplay loop>
-        <source src="static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-          style="video::internal-media-controls{display: none;}">
-        <source src="static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-          style="video::internal-media-controls{display: none;}">
-      </video>
-    </a>
-  </picture>
-  <header >
+  <header>
     <div class="flex">
-      <nav>
-        <a id="logoPK" href="#">
-          <img style="float: right;" src="static/logoPK.png" alt="">
-        </a>
-        <a id="logo" class="logoPK" href="./templates/menu.html">
-          <img id="menu" src="static/menu.png" alt="">
-        </a>
-        <ul class="minhaDivNavApareceESome">
-          <li>
-            <a href="templates/cursos.html">
-              CURSOS
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/ti.udia/" target="_blank">
-              BLOG
-            </a>
-          </li>
-          <li>
-            <a href="templates/sobre.html">
-              SOBRE
-            </a>
-          </li>
-          <li>
-            <a href="templates/hall da fama.html">
-              HALL DA FAMA
-            </a>
-          </li>
-          <li>
-            <a href="templates/validar certificado.html">
-              VALIDAR CERTIFICADO
-            </a>
-          </li>
-          <li>
-            <a href="templates/formulario de inscrição.html">
-              AFILIADOS
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-      </header>
-      <video style="margin-top: 10vh;" muted autoplay loop>
-        <source src="static/primeiro.mp4" media="(max-width: 500px)"
-          style="video::internal-media-controls{display: none;}">
-        <source src="static/Infinity.mp4" media="(min-width: 501px)"
-          style="video::internal-media-controls{display: none;}">
-      </video>
+      <a id="logo" href="./templates/menu.html">
+        <img id="menu" src="static/menu.png" alt="">
+      </a>
+      
+  </header>
+  <picture id="video-topLogoPK" class="mp4">
+    <video muted autoplay loop style="video::internal-media-controls{display: none;}" src="static/topLogoPK.mp4">
+    </video>
+  </picture>
+  <video style="margin-top: 10vh;" muted autoplay loop>
+    <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
+    <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
+  </video>
   <div class="interface">
-        <picture>
+    <picture>
       <img id="produtosPng" src="static/produtos.png" alt="">
     </picture>
     <section>
-       <h1 style="color: #230D73;">
-                INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
+      <h1 style="color: #230D73;">
+        INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
       <p>
         Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time
@@ -95,44 +50,11 @@
         sonha em ter
       </p>
     </section>
-    <div style="background-color: #230d731a;">
-      <h1>
-        Seu time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-      </h1>
-      <p>
-        <strong style="color:#230D73">
-          Desenvolvedores, UI x UX
-        </strong>
-        e estrategistas de trafego
-        <strong style="color: #230D73">
-          organico
-        </strong>
-        e
-        <strong style="color:#230D73">
-          pago
-        </strong>
-        atuamos principalmente com a venda e revenda de scripts ou modelos.
-      </p>
-    </div>
-        <p>
-      Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
-      uma mistura de engenharia social.
-    </p>
-    <h1 id="form">
-      Aguardo ancioso para nossa entrevista online.
-    </h1>
-    <h2>
-      Venha conversar e compartilhe sua ideia conosco.
-    </h2>
-    <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
-    <p>Seja bem-vindo à INFOPRODUTOS!</p>
   </div>
-  <footer style=" padding: 5px;">
-    
-   <section id="apps">
-    <h1 style="text-align: center; font-size: xx-large; margin: 15px;">Projetos</h1>
+  <div id="apps" style="background-color: #230d731a;">
+    <h1>Projetos</h1>
     <ul>
-           <li>
+      <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
           <img src="static/logoAcai.png" alt="">
         </a>
@@ -153,29 +75,64 @@
         </a>
       </li>
     </ul>
-  </section>
-</footer>
-<div class="flex">
-  <p style="background-color: white; color: #230D73;">
-    Desenvolvido por
-    <a href="https://www.instagram.com/pablo_kennediy/" target="_blank">
-      <strong>
-        Nikke
+    <h1>
+      Seu time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>
+    <p>
+      <strong style="color:#230D73">
+        Desenvolvedores, UI x UX
       </strong>
-    </a>
-  </p>
-  <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
-    <a target="_blank" href="https://www.facebook.com/profile.php?id=100063715227252">
-      <img src="static/facebook.png" alt="" />
-    </a>
-    <a target="_blank" href="https://www.instagram.com/ti.udia/">
-      <img src="static/instagram.png" alt="" />
-    </a>
-    <a target="_blank" href="https://github.com/Pablo-Kennediy">
-      <img src="static/github.png" alt="">
-    </a>
-  </picture>
+      e estrategistas de trafego
+      <strong style="color: #230D73">
+        organico
+      </strong>
+      e
+      <strong style="color:#230D73">
+        pago
+      </strong>
+      atuamos principalmente com a venda e revenda de scripts ou modelos.
+    </p>
+    <p>
+      Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
+      uma mistura de engenharia social.
+    </p>
+    <h1 id="form">
+      Aguardo ancioso para nossa entrevista online.
+    </h1>
+    <h2>
+      Venha conversar e compartilhe sua ideia conosco.
+    </h2>
+    <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
+    <p>Seja bem-vindo à INFOPRODUTOS!</p>
   </div>
+  <a href="https://maper.info/29j736" style="background-color: white;" target="_blank">
+    <video id="btnWhatsapp" muted autoplay loop>
+      <source src="static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 301px)"
+        style="video::internal-media-controls{display: none;}">
+      <source src="static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 300px)"
+        style="video::internal-media-controls{display: none;}">
+    </video>
+  </a>
+  <footer style="height: 30vh;">
+    <div class="flex">
+      <p>
+        Desenvolvido por
+        <a href="https://www.instagram.com/pablo_kennediy/" target="_blank">
+          <strong>
+            Pablo Kennediy
+          </strong>
+        </a>
+      </p>
+      <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
+        <a target="_blank" href="https://www.facebook.com/profile.php?id=100063715227252">
+          <img src="static/facebook.png" alt="" />
+        </a>
+        <a target="_blank" href="https://github.com/Pablo-Kennediy">
+          <img src="static/github.png" alt="">
+        </a>
+      </picture>
+    </div>
+  </footer>
   <div
     style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
     <iframe loading="lazy"
