--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
     <p>Seja bem-vindo à INFOPRODUTOS!</p>
   </div>
-  <a href="https://maper.info/29j736" style="background-color: white;" target="_blank">
+  <a href="fale-conosco.html" style="background-color: white;" target="_blank">
     <video id="btnWhatsapp" muted autoplay loop>
       <source src="static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 301px)"
         style="video::internal-media-controls{display: none;}">
