--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
   <header>
     <div class="flex">
       <a id="logo" href="./templates/menu.html">
-        <img id="menu" src="static/menu.png" alt="">
-      </a>
-      
+        <img id="menu" src="static/menu.png">
+      </a>      
   </header>
   <picture id="video-topLogoPK" class="mp4">
     <video muted autoplay loop style="video::internal-media-controls{display: none;}" src="static/topLogoPK.mp4">
     </video>
   </picture>
-  <video style="margin-top: 10vh;" muted autoplay loop>
+  <video muted autoplay loop>
     <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
     <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
   </video>
