--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="flex">
       <a id="logo" href="./templates/menu.html">
         <img id="menu" src="static/menu.png">
-      </a>      
+      </a>
   </header>
   <picture id="video-topLogoPK" class="mp4">
     <video muted autoplay loop style="video::internal-media-controls{display: none;}" src="static/topLogoPK.mp4">
@@ -27,28 +27,33 @@
     <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
   </video>
   <div class="interface">
-    <picture>
-      <img id="produtosPng" src="static/produtos.png" alt="">
-    </picture>
     <section>
-      <h1 style="color: #230D73;">
-        INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
+      <div class="flex">
+        <picture class="produtosPng">
+          <label for="">
+            INFOPRODUTOS.org
+          </label>
+          <img id="produtosPng" src="static/produtos.png" alt="">
+        </picture>
+      </div>
+      <h1 style="color: #230D73; text-align: center;">
+        Reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
       <p>
-        Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time
-        validado de
-        Desenvolvedores
-      </p>
-      <p>
-        Original: Aqui você vai encontrar um grupo de Desenvolvedores renomados, UI x UX e estrategistas de trafego
-        organico e pago atuamos principalmente com a venda e revenda de scripts ou modelos.
-      </p>
-      <p>
-        Na reunião você retira duvidas, solicita referências do nosso trabalho e assim pode ter a certeza absoluta que a
+        Nas reuniões você retira duvidas, solicita referências do nosso trabalho e assim pode ter a certeza absoluta que a
         <strong>INFOPRODUTOS</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
         sonha em ter
       </p>
-    </section>
+      <label>
+        Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time
+        validado de
+        Desenvolvedores
+      </label>
+      <label>
+        Original: Aqui você vai encontrar um grupo de Desenvolvedores renomados, UI x UX e estrategistas de trafego
+        organico e pago atuamos principalmente com a venda e revenda de scripts ou modelos.
+      </label>
+         </section>
   </div>
   <div id="apps" style="background-color: #230d731a;">
     <h1>Projetos</h1>
