--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <a id="logo" href="./templates/menu.html">
         <img id="menu" src="static/menu.png">
       </a>
+      <a style="margin: auto;" href="#">
+        <img src="static/logoPK.png" class="minhaDivNavApareceESomeLogoPK">
+      </a>
+    </div>
   </header>
   <picture id="video-topLogoPK" class="mp4">
     <video muted autoplay loop style="video::internal-media-controls{display: none;}" src="static/topLogoPK.mp4">
