--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         Reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
       <p>
-        Nas reuniões você retira duvidas, solicita referências do nosso trabalho e assim pode ter a certeza absoluta que a
+        Nas reuniões você retira duvidas, solicita referências do nosso trabalho e assim pode ter a certeza absoluta que
+        a
         <strong>INFOPRODUTOS</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
         sonha em ter
       </p>
@@ -57,10 +58,12 @@
         Original: Aqui você vai encontrar um grupo de Desenvolvedores renomados, UI x UX e estrategistas de trafego
         organico e pago atuamos principalmente com a venda e revenda de scripts ou modelos.
       </label>
-         </section>
+    </section>
   </div>
   <div id="apps" style="background-color: #230d731a;">
-    <h1>Projetos</h1>
+    <h1 style="font-size: 4rem; text-align: center; color: white;">
+      Projetos
+    </h1>
     <ul>
       <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
@@ -83,20 +86,21 @@
         </a>
       </li>
     </ul>
-    <h1>
+    <h1 style="color: white;">
       Seu time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
     </h1>
     <p>
+      Desenvolvedores WEB com em Design
       <strong style="color:#230D73">
-        Desenvolvedores, UI x UX
+        UI x UX
       </strong>
       e estrategistas de trafego
       <strong style="color: #230D73">
-        organico
+        ORGANICO
       </strong>
       e
       <strong style="color:#230D73">
-        pago
+        PAGO
       </strong>
       atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
