--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
       uma mistura de engenharia social.
     </p>
-    <h1 id="form">
+    <h1 style="font-size: 4rem; text-align: center; color: white;">
       Aguardo ancioso para nossa entrevista online.
     </h1>
     <h2>
